# mcp-jp-fts

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  README_en.md  comments.json  lefthook.yml  mise.toml  osv-scanner.toml  pyproject.toml  server.py  tox.ini
.github/workflows/: release.yml
src/mcp_jp_fts/: __init__.py  server.py
tests/: conftest.py  test_server.py
tests/resources/subdir1/: ginga.txt
tests/resources/subdir2/: kokoro.txt
