[project]
name = "mcp-jp-fts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "fastmcp>=2.14.4",
    "pathspec>=1.0.3",
    "pytest>=9.0.2",
    "sudachidict-core>=20260116",
    "sudachipy>=0.6.10",
]

[project.scripts]
mcp-jp-fts = "mcp_jp_fts.server:main"

[dependency-groups]
dev = [
    "tox>=4.34.1",
    "tox-uv>=1.29.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"] # Ignore line length for comments

# [tool.ty] removed to rely on auto-discovery

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
