[project]
name = "mcp-jp-fts"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "fastmcp>=2.14.4",
    "pathspec>=1.0.3",
    "sudachidict-core>=20260116",
    "sudachipy>=0.6.10",
    "watchdog>=4.0.0",
]

[project.scripts]
mcp-jp-fts = "mcp_jp_fts.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "tox>=4.34.1",
    "tox-uv>=1.29.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"] # Ignore line length for comments

# [tool.ty] removed to rely on auto-discovery

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_source = "tag"
commit_message_options = { subject_label = "[skip ci] release" }
build_command = "uv build"

